add june 20th papers and cdl blog post

--- a/index.html
+++ b/index.html
@@ -112,6 +112,71 @@
     <!-- Posts -->
     <p class="blocktext">
         .................................... <br>
+        <b>Rigetti Partners with CDL to Drive Quantum Machine Learning</b>
+        [<a href="https://medium.com/rigetti/rigetti-partners-with-cdl-to-drive-quantum-machine-learning-25e439c353"
+            target="_blank">blogpost</a>]
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                24 August, 2017
+            </p>
+        </small>
+
+
+    <p class="blocktext">
+        .................................... <br>
+        <b>Demonstration of Universal Parametric Entangling Gates on a Multi-Qubit Lattice</b>
+        [<a href="https://arxiv.org/abs/1706.06570" target="_blank">arXiv</a>]
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                20 June, 2017
+                <br><br>
+                We show that parametric coupling techniques can be used to generate selective
+                entangling interactions for multi-qubit processors. By inducing coherent population
+                exchange between adjacent qubits under frequency modulation, we implement a
+                universal gateset for a linear array of four superconducting qubits. An average
+                process fidelity of F=93% is estimated for three two-qubit gates via quantum
+                process tomography. We establish the suitability of these techniques for
+                computation by preparing a four-qubit maximally entangled state and comparing the
+                estimated state fidelity against the expected performance of the individual
+                entangling gates. In addition, we prepare an eight-qubit register in all possible
+                bitstring permutations and monitor the fidelity of a two-qubit gate across one pair
+                of these qubits. Across all such permutations, an average fidelity of F=91.6±2.6%
+                is observed. These results thus offer a path to a scalable architecture with high
+                selectivity and low crosstalk.
+            </p>
+        </small>
+
+
+    <p class="blocktext">
+        .................................... <br>
+        <b>Parametrically-Activated Entangling Gates Using Transmon Qubits</b>
+        [<a href="https://arxiv.org/abs/1706.06562" target="_blank">arXiv</a>]
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                20 June, 2017
+                <br><br>
+                We propose and implement a family of entangling qubit operations activated by
+                radio-frequency flux pulses. By parametrically modulating the frequency of a
+                tunable transmon, these operations selectively actuate resonant exchange of
+                excitations with a statically coupled, but otherwise off-resonant, neighboring
+                transmon. This direct exchange of excitations between qubits obviates the need for
+                mediator qubits or resonator modes, and it allows for the full utilization of all
+                qubits in a scalable architecture. Moreover, we are able to activate three
+                highly-selective resonances, corresponding to two different classes of entangling
+                gates that enable universal quantum computation: an iSWAP and a controlled-Z
+                rotation. This selectivity is enabled by resonance conditions that depend both on
+                frequency and amplitude, and is helpful in avoiding frequency crowding in a
+                scalable architecture. We report average process fidelities of F = 0.93 for a
+                135 ns iSWAP, and F = 0.92 for 175 ns and 270 ns controlled-Z operations.
+            </p>
+        </small>
+
+
+    <p class="blocktext">
+        .................................... <br>
         <b>Architectures for Hybrid Quantum/Classical Computing</b>
         [<a href="http://willzeng.com/shared/ORNL_Zeng_05252017.pdf" target="_blank">slides</a>]
         #talk
