add nature comment

--- a/index.html
+++ b/index.html
@@ -112,6 +112,30 @@
     <!-- Posts -->
     <p class="blocktext">
         .................................... <br>
+        <b>Nature Comment: First Quantum Computers Need Smart Software</b>
+        [<a href="https://www.nature.com/news/first-quantum-computers-need-smart-software-1.22590"
+            target="_blank">Nature</a>] [<a href="http://www.nature.com/nature/podcast/index-2017-09-14.html"
+            target="_blank">podcast</a>]
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                13 September, 2017
+                <br><br>
+                We outline three developments that are needed over the next five years to ensure
+                that the first quantum computers can be programmed to perform useful tasks. First,
+                developers must think in terms of 'hybrid' approaches that combine classical and
+                quantum processors. For example, at Rigetti we have developed an interface called
+                Quil, which includes a set of basic instructions for managing quantum gates and
+                classical processors and for reading and writing to and from shared memory. Second,
+                researchers and engineers must build and use open-source software for
+                quantum computing applications. Third, scientists need to establish a
+                quantum programming community to nurture an ecosystem of software. This community
+                must be interdisciplinary, inclusive and focused on applications.
+            </p>
+        </small>
+
+    <p class="blocktext">
+        .................................... <br>
         <b>Rigetti Partners with CDL to Drive Quantum Machine Learning</b>
         [<a href="https://medium.com/rigetti/rigetti-partners-with-cdl-to-drive-quantum-machine-learning-25e439c353"
             target="_blank">blogpost</a>]
