add Forest 1.2 items

--- a/index.html
+++ b/index.html
@@ -110,6 +110,47 @@
 
 
     <!-- Posts -->
+    <b>Unsupervised Machine Learning on Rigetti 19Q with Forest 1.2</b>
+        [<a href="https://medium.com/rigetti/unsupervised-machine-learning-on-rigetti-19q-with-forest-1-2-39021339699"
+            target="_blank">blogpost</a>]
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                18 December, 2017
+                <br><br>
+                We are excited to share that our team has demonstrated unsupervised machine learning 
+                using 19Q, our new 19-qubit general purpose superconducting quantum processor. We did 
+                this with a quantum/classical hybrid algorithm for clustering developed at Rigetti...
+            </p>
+        </small>
+    
+    <p class="blocktext">
+        .................................... <br>
+        <b>Unsupervised Machine Learning on a Hybrid Quantum Computer</b>
+        [<a href="https://arxiv.org/abs/1712.05771"
+            target="_blank">arXiv</a>]
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                18 December, 2017
+                <br><br>
+                Machine learning techniques have led to broad adoption of a statistical model of 
+                computing. The statistical distributions natively available on quantum processors 
+                are a superset of those available classically. Harnessing this attribute has the 
+                potential to accelerate or otherwise improve machine learning relative to purely 
+                classical performance. A key challenge toward that goal is learning to hybridize 
+                classical computing resources and traditional learning techniques with the emerging 
+                capabilities of general purpose quantum processors. Here, we demonstrate such 
+                hybridization by training a 19-qubit gate model processor to solve a clustering 
+                problem, a foundational challenge in unsupervised learning. We use the quantum 
+                approximate optimization algorithm in conjunction with a gradient-free Bayesian 
+                optimization to train the quantum machine. This quantum/classical hybrid algorithm 
+                shows robustness to realistic noise, and we find evidence that classical optimization 
+                can be used to train around both coherent and incoherent imperfections.
+            </p>
+        </small>
+
+    
     <p class="blocktext">
         .................................... <br>
         <b>Nature Comment: First Quantum Computers Need Smart Software</b>
