bugfix in alignment

--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
 
 
     <!-- Posts -->
-    <b>Unsupervised Machine Learning on Rigetti 19Q with Forest 1.2</b>
+    <p class="blocktext">
+        .................................... <br>
+        <b>Unsupervised Machine Learning on Rigetti 19Q with Forest 1.2</b>
         [<a href="https://medium.com/rigetti/unsupervised-machine-learning-on-rigetti-19q-with-forest-1-2-39021339699"
             target="_blank">blogpost</a>]
     </p>
