add qip 2018 video

--- a/index.html
+++ b/index.html
@@ -112,6 +112,40 @@
     <!-- Posts -->
     <p class="blocktext">
         .................................... <br>
+        <b>Easy, Hybrid Quantum Programming with Forest</b>
+        [<a href="https://collegerama.tudelft.nl/Mediasite/Showcase/qip2018/Presentation/7d528027327d4b9ea3fa2c7f95417a521d"
+            target="_blank">video</a>]
+        #talk <br>
+        <p class="videoWrapper">
+            <iframe width="320" height="240" frameborder="0" scrolling="auto" marginheight="0"
+                    marginwidth="0" src="https://collegerama.tudelft.nl/Mediasite/Play/7d528027327d4b9ea3fa2c7f95417a521d?playfrom=0&player=0381c08c03db488d8bdbd4a5dfd3478b0a">
+            </iframe>
+        </p>
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                14 January, 2018
+                <br>
+                <a href="https://qutech.nl/qip2018/">QIP2018</a>, Delft, Netherlands <br><br>
+                The first scalable universal quantum computers are now available, such as the 19
+                qubit processor built by Rigetti Computing. As these devices mature, it is
+                important to consider how best to make use of them. This requires new and applied
+                programming models for quantum computing. In particular, promising near-term
+                algorithms for quantum simulation, optimization, and machine learning require a
+                hybrid quantum/classical programming environment. In this talk, we introduce a
+                freely available open-source environment (<a href="http://forest.rigetti.com">Forest</a>)
+                based on a shared-memory intermediate representation
+                (<a href="https://arxiv.org/abs/1608.03355"> Quil</a>) that is optimized for
+                this hybrid model. The environment runs through a cloud API with client-side Python
+                libraries that target both superconducting quantum circuit and classical simulation
+                backends. We will share how to get started with Forest, as well as how to do
+                research with example hybrid algorithms using a quantum computer.
+            </p>
+        </small>
+
+
+    <p class="blocktext">
+        .................................... <br>
         <b>Unsupervised Machine Learning on Rigetti 19Q with Forest 1.2</b>
         [<a href="https://medium.com/rigetti/unsupervised-machine-learning-on-rigetti-19q-with-forest-1-2-39021339699"
             target="_blank">blogpost</a>]
