add Forest 1.3 release post

--- a/index.html
+++ b/index.html
@@ -112,6 +112,29 @@
     <!-- Posts -->
     <p class="blocktext">
         .................................... <br>
+        <b>Forest 1.3: Upgraded developer tools, improved stability, and faster execution</b>
+        [<a href="https://medium.com/rigetti/forest-1-3-upgraded-developer-tools-improved-stability-and-faster-execution-561b8b44c875"
+            target="_blank">blogpost</a>]
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                22 February, 2017
+                <br><br>
+                In December, the team at Rigetti became the first to solve an unsupervised machine
+                learning problem on a gate model quantum computer. We did this by connecting one of
+                our recent superconducting quantum processors, a 19-qubit system, to our software
+                platform, Forest. In the ten weeks since then, researchers have already used Forest
+                to train neural networks, program benchmarking games, and simulate nuclear physics.
+                <br><br>
+                Starting today, researchers using Forest will be upgraded to version 1.3, which
+                provides better tools for optimizing and debugging quantum programs. The upgrade
+                also provides greater stability in our quantum processor (QPU), which will let
+                researchers run more powerful quantum programs...
+            </p>
+        </small>
+
+    <p class="blocktext">
+        .................................... <br>
         <b>Easy, Hybrid Quantum Programming with Forest</b>
         [<a href="https://collegerama.tudelft.nl/Mediasite/Showcase/qip2018/Presentation/7d528027327d4b9ea3fa2c7f95417a521d"
             target="_blank">video</a>]
