--- a/index.html
+++ b/index.html
@@ -112,6 +112,23 @@
     <!-- Posts -->
     <p class="blocktext">
         .................................... <br>
+        <b>Why and how to program a quantum computer</b>
+        [<a href="http://willzeng.com/shared/QuantumProgramming_Introduction.pdf"
+            target="_blank">slides</a>]
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                3 April, 2018 at Stanford Platform Lab
+                <br><br>
+                This talk is an introduction to modern quantum programming. It covers why you might
+                want to program a quantum computer and how you would do so today. The only background
+                assumed is linear algebra and complex numbers at the level of undergraduate computer science.
+            </p>
+        </small>
+
+
+    <p class="blocktext">
+        .................................... <br>
         <b>Forest 1.3: Upgraded developer tools, improved stability, and faster execution</b>
         [<a href="https://medium.com/rigetti/forest-1-3-upgraded-developer-tools-improved-stability-and-faster-execution-561b8b44c875"
             target="_blank">blogpost</a>]
