add impact.tech slides

--- a/index.html
+++ b/index.html
@@ -112,6 +112,22 @@
     <!-- Posts -->
     <p class="blocktext">
         .................................... <br>
+        <b>The Arrival of Quantum Computing</b>
+        [<a href="http://willzeng.com/shared/ImpactTechTalk.pdf"
+            target="_blank">slides</a>]
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                19 April, 2018 at Impact.Tech
+                <br><br>
+                This talk is an introduction to quantum computing. Part 1 introduces the technology
+                and Part 2 introduces the industry. It covers how you may get involved as a scientist,
+                 programmer, entrepreneur, or investor.
+            </p>
+        </small>
+
+    <p class="blocktext">
+        .................................... <br>
         <b>Why and how to program a quantum computer</b>
         [<a href="http://willzeng.com/shared/QuantumProgramming_Introduction.pdf"
             target="_blank">slides</a>]
