add skillsmatter video

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
             height: 100%;
         }
 
+        .responsive {
+            width: 100%;
+            height: auto;
+        }
+
     </style>
 
     <!-- Google Analytics -->
@@ -73,7 +78,7 @@
     </center>
     <p class="blocktext">
         <!-- About -->
-        I work on research, development and strategy at
+        I work on research, product and strategy at
         <a href="http://rigetti.com" target="_blank">rigetti</a> quantum
         computing. I am focused on quantum computer architecture, quantum software
         and algorithm engineering, and making quantum computing <i>useful</i>.
@@ -110,6 +115,26 @@
 
 
     <!-- Posts -->
+    <p class="blocktext">
+        .................................... <br>
+        <b>Programming the world's first quantum computers using Forest</b>
+        [<a href="https://skillsmatter.com/skillscasts/11929-programming-the-world-s-first-quantum-computers-using-forest"
+            target="_blank">video</a>]
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                9 May, 2018 at Skillsmatter, London
+                <br><br>
+                This talk is an introduction to modern quantum programming. It covers why you might
+                want to program a quantum computer and how you would do so today. The only background
+                assumed is linear algebra and complex numbers at the level of undergraduate computer science.
+            </p>
+            <a href="https://skillsmatter.com/skillscasts/11929-programming-the-world-s-first-quantum-computers-using-forest"
+            target="_blank">
+                <img src="shared/qc_math.png" alt="Quantum computing framework" class="responsive">
+            </a>
+        </small>
+
     <p class="blocktext">
         .................................... <br>
         <b>The Arrival of Quantum Computing</b>
