add unitary fund links

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         <a href="https://www.linkedin.com/in/zengwill/" target="_blank">linkedin </a> |
         <a href="https://arxiv.org/a/zeng_w_1.html" target="_blank">arXiv</a> |
         <a href="https://goo.gl/cLuZij" target="_blank">currently listening</a> |
+        <a href="http://unitary.fund" target="_blank">Unitary Fund</a> |
         <br><br>
 
         I am product lead for the
@@ -97,6 +98,8 @@
         <a href="https://github.com/rigetticomputing/pyquil" target="_blank">pyquil</a>
         and
         <a href="https://github.com/rigetticomputing/grove" target="_blank">grove</a>.
+        I run the <a href="http://unitary.fund">Unitary Fund</a> to support open source
+        quantum programming with grants.
         My
         <a href="http://arxiv.org/abs/1512.08062" target="_blank"> phd thesis</a>
         at oxford applies abstract methods (mainly from categorical algebra) to the
