add unitary fund post

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <a href="https://www.linkedin.com/in/zengwill/" target="_blank">linkedin </a> |
         <a href="https://arxiv.org/a/zeng_w_1.html" target="_blank">arXiv</a> |
         <a href="https://goo.gl/cLuZij" target="_blank">currently listening</a> |
-        <a href="http://unitary.fund" target="_blank">Unitary Fund</a> |
+        <a href="http://unitary.fund" target="_blank">unitary fund</a> |
         <br><br>
 
         I am product lead for the
@@ -118,6 +118,21 @@
 
 
     <!-- Posts -->
+    <p class="blocktext">
+        .................................... <br>
+        <b>Introducing the Unitary Fund: Get $2,000 for your open source quantum computing project</b>
+        [<a href="https://medium.com/@wjzeng/the-unitary-fund-get-2-000-for-your-open-source-quantum-computing-project-d4b4c76ba177"
+            target="_blank">Medium</a>]
+    </p>
+        <small>
+            <p class="blocktext abstract">
+                24 June, 2018
+                <br><br>
+                I'm starting a new experiment called the <a href="http://unitary.fund"> Unitary Fund</a>:
+                accepting proposals now to get $2,000 for your open source quantum computing project.
+            </p>
+        </small>
+
     <p class="blocktext">
         .................................... <br>
         <b>Programming the world's first quantum computers using Forest</b>
