add unitary fund links

--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
         <b>Introducing the Unitary Fund: Get $2,000 for your open source quantum computing project</b>
         [<a href="https://medium.com/@wjzeng/the-unitary-fund-get-2-000-for-your-open-source-quantum-computing-project-d4b4c76ba177"
             target="_blank">Medium</a>]
+        [<a href="http://unitary.fund">unitary.fund</a>]
+        [<a href="https://www.computerworld.com.au/article/643108/fund-launched-open-source-quantum-software-devs/">coverage</a>]
+
+    </a>
     </p>
         <small>
             <p class="blocktext abstract">
