consistent non caps

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <a href="https://github.com/rigetticomputing/pyquil" target="_blank">pyquil</a>
         and
         <a href="https://github.com/rigetticomputing/grove" target="_blank">grove</a>.
-        I run the <a href="http://unitary.fund">Unitary Fund</a> to support open source
+        I run the <a href="http://unitary.fund">unitary fund</a> to support open source
         quantum programming with grants.
         My
         <a href="http://arxiv.org/abs/1512.08062" target="_blank"> phd thesis</a>
